--- a/Mywebsite/myapp/templates/index.html
+++ b/Mywebsite/myapp/templates/index.html
@@ -119,6 +119,7 @@
       <input class="pass" type="password" align="center" placeholder="Password", name="passwd">
       <input class="submit" align="center" type=submit></a>
       <p class="forgot" align="center"><a href="#">Forgot Password?</p>
+      <p class="forgot" align="center"><a href="Register">Register New User</p>
             
                 
     </div>
