--- a/Mywebsite/myapp/templates/Register.html
+++ b/Mywebsite/myapp/templates/Register.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+    {% load static %}
+    <img style="width: 245px; height: 247px;"
+    alt="Image description"
+    src="{% static 'prity_image.jpg' %}"/>
 </body>
 </html>
