--- a/Mywebsite/myapp/templates/Register.html
+++ b/Mywebsite/myapp/templates/Register.html
@@ -9,6 +9,6 @@
     {% load static %}
     <img style="width: 245px; height: 247px;"
     alt="Image description"
-    src="{% static 'prity_image.jpg' %}"/>
+    src="{% static 'hqdefault.jpg' %}"/>
 </body>
 </html>
