--- a/Mywebsite/myapp/templates/Register.html
+++ b/Mywebsite/myapp/templates/Register.html
@@ -1,14 +1,59 @@
+<!--
+Author: Colorlib
+Author URL: https://colorlib.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
 <!DOCTYPE html>
-
-<html lang="en">
+{% load static %}
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<title>Creative Colorlib SignUp Form</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<link rel="stylesheet" href="{% static '/style.css' %}" />
+<link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
 </head>
 <body>
-    {% load static %}
-    <img style="width: 245px; height: 247px;"
-    alt="Image description"
-    src="{% static 'hqdefault.jpg' %}"/>
+	<div class="main-w3layouts wrapper">
+		<h1>Registration Details</h1>
+		<div class="main-agileinfo">
+			<div class="agileits-top">
+				<form action="register_user" method="post">
+					<input class="text" type="text" name="Username" placeholder="Name" required="true">
+					<input class="text email" type="email" name="email" placeholder="Email" required="true">
+					<input class="text w3lpass" type="text" name="mobile" placeholder="Enter Phone" required="true">
+					<input class="text" type="password" name="password" placeholder="Password" required="true">
+					<div class="wthree-text">
+						<label class="anim">
+							<input type="checkbox" class="checkbox" required="true">
+							<span>I Agree To The Terms & Conditions</span>
+						</label>
+						<div class="clear"> </div>
+					</div>
+					<input type="submit" value="SIGNUP">
+				</form>
+				<p>Already have an Account? <a href="/"> Login Now!</a></p>
+			</div>
+		</div>
+		<!-- copyright -->
+		<div class="colorlibcopy-agile">
+			<p>© 2020 Django Signup Form. All rights reserved | Design by Daksha....
+		</div>
+		<!-- //copyright -->
+		<ul class="colorlib-bubbles">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
 </body>
 </html>
