--- a/Mywebsite/myapp/templates/homepage.html
+++ b/Mywebsite/myapp/templates/homepage.html
@@ -105,11 +105,11 @@
 				</div>
 			</div>
 			<div class="html compose">
-				<div class="forms" action="/details">
-                    <form action="/details">
+				<div class="forms">
+                    <form action="/details" method="post">
 					<div class="group clearfix slideInRight animated">
 						<label class="pull-left" for="compose-time"><span class="ion-ios-time-outline"></span> Time</label>
-						<input class="pull-right" id="compose-time" type="time">
+						<input class="pull-right" id="compose-time" type="time" name>
 					</div>
 					<div class="group clearfix slideInLeft animated">
 						<label class="pull-left" for="compose-date"><span class="ion-ios-calendar-outline"></span> Date</label>
