too lazy to comment

--- a/Mywebsite/myapp/templates/homepage.html
+++ b/Mywebsite/myapp/templates/homepage.html
@@ -109,19 +109,19 @@
                     <form action="/details" method="post">
 					<div class="group clearfix slideInRight animated">
 						<label class="pull-left" for="compose-time"><span class="ion-ios-time-outline"></span> Time</label>
-						<input class="pull-right" id="compose-time" type="time" name>
+						<input class="pull-right" id="compose-time" type="time" name="time">
 					</div>
 					<div class="group clearfix slideInLeft animated">
 						<label class="pull-left" for="compose-date"><span class="ion-ios-calendar-outline"></span> Date</label>
-						<input class="pull-right" id="compose-date" type="date">
+						<input class="pull-right" id="compose-date" type="date" name="date">
 					</div>
 					<div class="group clearfix slideInRight animated">
 						<label class="pull-left" for="compose-title"><span class="ion-ios-paper-outline"></span> Title</label>
-						<input class="pull-right" id="compose-title" type="text">
+						<input class="pull-right" id="compose-title" type="text" name="title">
 					</div>
 					<div class="group clearfix slideInLeft animated">
 						<label class="visible" for="compose-detail"><span class="ion-ios-list-outline"></span> Task</label>
-						<textarea class="visible" id="compose-detail" rows="3"></textarea>
+						<textarea class="visible" id="compose-detail" rows="3" name="detail"></textarea>
 					</div>
 					<div class="action flipInY animated">
 						<button class="btn">Compose</button>
